# slambook2_notes

ch12/: CMakeCache.txt
ch13/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  myslam.cbp
ch13/app/: CTestTestfile.cmake  Makefile  cmake_install.cmake
ch13/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake  frontend.cpp  viewer.cpp
ch13/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
ch3/: CMakeCache.txt  Makefile  chapter3.cbp  cmake_install.cmake
ch3/examples/: CMakeCache.txt  CMakeLists.txt  Makefile  Project.cbp  cmake_install.cmake  coordinateTransform.cpp  example.cbp  plotTrajectory  plotTrajectory.cpp
ch3/useEigen/: Makefile  cmake_install.cmake  eigenMatrix  useEigen.cbp
ch3/useGeometry/: Makefile  (+2 more)
ch4/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  useSophus.cbp  useSophus.cpp
ch4/example/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  trajectoryError  trajectoryError.cpp
ch5/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  tt.cbp
ch6/: CMakeCache.txt  Makefile  ceresCurveFitting  ch6.cbp  cmake_install.cmake  g2oCurveFitting  gaussNewton
ch7/: CMakeCache.txt  Makefile  cmake_install.cmake  orb_cv  orb_self  pose_estimation_2d2d  pose_estimation_3d2d  pose_estimation_3d2d.cpp  pose_estimation_3d3d  triangulation  vo1.cbp
ch8/: CMakeCache.txt  Makefile  ch8.cbp  cmake_install.cmake  direct_method.cpp  optical_flow.cpp
ch9/: CMakeCache.txt  Makefile  bundle_adjustment_ceres  bundle_adjustment_g2o  cmake_install.cmake  final.ply
(+17 files in other folders)
